--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,4 +1,5 @@
 <div class="a_modal hide">
+  {{dialogType}}
   <div class="a_modal-dialog {{dialogType}}" [ngSwitch]="dialogType">
     <a href="javascript:void(0)" class="i_close close" (click)="closeDialog()">+</a>
       <app-video-source *ngSwitchCase="'video'"></app-video-source>
