--- a/src/app/login-source/login-source.component.html
+++ b/src/app/login-source/login-source.component.html
@@ -65,5 +65,5 @@
       </div>
     </div>
     <p class="text-align-center btn_loginregister">
-      <a href="javascript:void(0)" class="ubtn blackbtn" ng-click="userRegister()">register</a>
+      <a href="javascript:void(0)" class="ubtn blackbtn" (click)="userRegister()">register</a>
     </p>
