--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -30,7 +30,7 @@
             </li>
 
              <li *ngIf="is_login">
-               <a href="javascript:void(0)" class="hl" ng-click="nevigateMySction('myaccount')">My Account</a>
+               <a routerLink="/myaccount" class="hl">My Account</a>
             </li>
              <li *ngIf="is_login">
                <a href="javascript:void(0)" data-popup="logout" class="hl y-logout" (click)="logout()">logout</a>
