--- a/src/app/myaccount/myaccount.component.html
+++ b/src/app/myaccount/myaccount.component.html
@@ -1,3 +1,50 @@
-<p>
-  myaccount works!
-</p>
+<div class="mymunchado _mt70">
+  <div class="_960px">
+     <p class="title_mymunchado txt_mypoints">my points</p>
+     <div class="row point_panel">
+        <div class="col-md-2 col-xs-6">
+           <p class="_fs14">Redeemable Points</p>
+           <strong class="txt_pointstyle _fontarial">{{redeemable_point}}</strong>
+        </div>
+        <div class="col-md-2 col-xs-6 _m0-xs">
+           <p class="_fs14">Cash Available</p>
+           <strong class="txt_pointstyle _fontarial">${{cash}}</strong>
+        </div>
+        <div class="col-md-2 col-xs-6">
+           <p class="_fs14">Total Points</p>
+           <strong class="_fontarial _fs20">{{total_point}}</strong>
+        </div>
+        <div class="col-md-2 col-xs-6 _m0-xs">
+           <p class="_fs14">Redeemed Points</p>
+           <strong class="_fontarial _fs20">{{redeemed_point}}</strong>
+        </div>
+        <div class="col-md-4 text-align-md-right col-xs-12">
+           <p class="_fs14">&nbsp;</p>
+           <a href="javascript:void(0)" class="ubtn blackbtn _mt17" (click)="getActivityArchive()">activity archive</a>
+        </div>
+     </div>
+     <p class="txt_redeempoint">You can redeem your points for up to ${{cash}} towards your next online order.</p>
+     <p class="title_mymunchado">past orders</p>
+     
+     <div *ngFor="let order of liveList" class="row order_list display-flex-none-xs display-flex">
+        <div class="col-md-5" ng-bind-html="order.description | htmlToPlaintext"></div>
+        <div class="col-md-2 col-xs-6 _pol">{{order.delivery_time}}</div>
+        <strong class="col-md-2 col-xs-6 _m0-xs text-align-xs-right  _pol">$ {{order.total_amount}}</strong>
+        <div class="col-md-3 text-align-md-right text-align-xs-center"><a href="javascript:void(0)" class="ubtn blackbtn" data-id="{{order.id}}" ng-click="viewOrder($event)">View</a></div>
+     </div>
+     
+     <div class="row order_list display-flex-none-xs display-flex" *ngFor="let order of archiveList">
+        <div class="col-md-5" ng-bind-html="order.description | htmlToPlaintext"></div>
+        <div class="col-md-2 col-xs-6 _pol">{{order.delivery_time}}</div>
+        <strong class="col-md-2 col-xs-6 _m0-xs text-align-xs-right  _pol">$ {{order.total_amount}}</strong>
+        <div class="col-md-3 text-align-md-right text-align-xs-center"><a href="javascript:void(0)" class="ubtn blackbtn" data-id="{{order.id}}" ng-click="viewOrder($event)">View</a></div>
+        <div class="col-md-3 text-align-md-right text-align-xs-center"><a href="javascript:void(0)" class="ubtn blackbtn" data-id="{{order.id}}" ng-click="rReorder($event)">reorder</a></div>
+        <p class="r_error_{{order.id}}"></p>
+     </div>
+     <div class="row order_list display-flex-none-xs display-flex" ng-show="!archiveorderData.length && !liveorderData.length">
+        <div class="col-md-5">No Record Found</div>
+     </div>
+
+
+  </div>
+</div>
