--- a/src/app/activity-list/activity-list.component.html
+++ b/src/app/activity-list/activity-list.component.html
@@ -15,5 +15,11 @@
   <div *ngIf="!activityList.length" class="row order_list">
     <p class="col-md-6">No activity found.</p>
   </div>
+  <div class="row order_list">
+      <p class="col-md-6">&nbsp;</p>
+      <strong class="col-md-2 text-align-center _fs14">Points remaining</strong>
+      <strong class="col-md-2 text-align-center">{{redeemable_point}}</strong>
+      <strong class="col-md-2 text-align-right"></strong>
+  </div>
 </div>
  
