--- a/src/app/myaccount/myaccount.component.html
+++ b/src/app/myaccount/myaccount.component.html
@@ -28,16 +28,16 @@
      
      <div *ngFor="let order of liveList" class="row order_list display-flex-none-xs display-flex">
         <div class="col-md-5">{{order.description}}</div>
-        <div class="col-md-2 col-xs-6 _pol">{{order.delivery_time}}</div>
+        <div class="col-md-2 col-xs-6 _pol">{{order.created_at}} {{order.requested_delivery_time}}</div>
         <strong class="col-md-2 col-xs-6 _m0-xs text-align-xs-right  _pol">$ {{order.total_amount}}</strong>
-        <div class="col-md-3 text-align-md-right text-align-xs-center"><a href="javascript:void(0)" class="ubtn blackbtn" data-id="{{order.id}}" ng-click="viewOrder($event)">View</a></div>
+        <div class="col-md-3 text-align-md-right text-align-xs-center"><a href="javascript:void(0)" class="ubtn blackbtn" (click)="viewOrder(orders.id)">View</a></div>
      </div>
      
      <div class="row order_list display-flex-none-xs display-flex" *ngFor="let orders of archiveList">
         <div class="col-md-5">{{orders.description}}</div>
-        <div class="col-md-2 col-xs-6 _pol">{{orders.delivery_time}}</div>
+        <div class="col-md-2 col-xs-6 _pol">{{orders.created_at}} {{orders.requested_delivery_time}}</div>
         <strong class="col-md-2 col-xs-6 _m0-xs text-align-xs-right  _pol">$ {{orders.total_amount}}</strong>
-        <div class="col-md-3 text-align-md-right text-align-xs-center"><a href="javascript:void(0)" class="ubtn blackbtn" data-id="{{orders.id}}" ng-click="viewOrder($event)">View</a></div>
+        <div class="col-md-3 text-align-md-right text-align-xs-center"><a href="javascript:void(0)" class="ubtn blackbtn" (click)="viewOrder(orders.id)">View</a></div>
         <div class="col-md-3 text-align-md-right text-align-xs-center"><a href="javascript:void(0)" class="ubtn blackbtn" data-id="{{orders.id}}" ng-click="rReorder($event)">reorder</a></div>
         <p class="r_error_{{orders.id}}"></p>
      </div>
