--- a/src/app/privacy/privacy.component.html
+++ b/src/app/privacy/privacy.component.html
@@ -1,8 +1,8 @@
 <div class="_960px">
-    <p class="title_mymunchado txt_mypoints">Privacy Policy</p>
+    <p class="sectiontitle title_mymunchado txt_mypoints">Privacy Policy</p>
     <div class="t_c">
         <p>This restaurant and Munch Ado, Inc. d/b/a Munch Ado (&#8220;we,&#8221; &#8220;our,&#8221; or &#8220;us&#8221;) respect your individual privacy. This Privacy Policy informs you of how your personal information is gathered and used in connection with our web site as well as our products and services that include a link to this Privacy Policy (collectively, and each individually, &#8220;Site&#8221;). For example, for purpose of this Privacy Policy, &#8220;Site&#8221; includes our website that is launched and viewed from certain smartphones, tablets and other devices. This Privacy Policy describes how we collect, use, and share personal and other information we obtain from users of the Site. This Privacy Policy only applies to the Site and not sites controlled by others. By using the Site, you agree to this Privacy Policy. Be sure to check this page periodically for updates.</p>
-        <p>This Privacy Policy is complemented by our Terms of Use available at <a target="_blank" routerLink="/terms">terms</a></p>
+        <p>This Privacy Policy is complemented by our Terms of Use available at <a title="Terms of Use" target="_blank" routerLink="/terms">terms</a></p>
         <p>This is the Site of: <strong>{{resname}}</strong></p>
         <p>We can be reached via e-mail at: {{currentRes.email}}</p>
         <p>We offer an online service that, among other things, allows you to place orders and make reservations at our Restaurant. We also may have signed-up with Munch Ado as marketing partners in connection with the Site and may, from time-to-time, offer certain additional options and features to users of the Site. </p>
@@ -55,10 +55,10 @@
             <br> You may post your own reviews and ratings and other information at our Site (&#8220;Reviews&#8221;) through our review platform. Reviews posted at our Site are subject to our privacy policy. You should not post Reviews that are private or that you do not want to be used and viewed by others as Reviews might may be identified as yours. You are solely responsible for any legal or other repercussions that occur as a result of Reviews you post at our Site. We assume no responsibility or liability which may arise from your Reviews.
         </p>
         <p><u>Reporting Copyright Violations</u>
-            <br> In compliance with the safe harbor provision of the Digital Millennium Copyright Act (DMCA), if you believe any user generated content infringes your copyright, please provide us with a detailed description of the allegedly infringing content, your name and ownership claim and send it to our attention at <a href="mailto:mine@munchado.com">Mine@munchado.com</a>
+            <br> In compliance with the safe harbor provision of the Digital Millennium Copyright Act (DMCA), if you believe any user generated content infringes your copyright, please provide us with a detailed description of the allegedly infringing content, your name and ownership claim and send it to our attention at <a title="Mail to" href="mailto:mine@munchado.com">Mine@munchado.com</a>
         </p>
         <p><u>Notice to California Residents</u>
-            <br> If you are a California resident, you have the right to receive: a) information identifying any third-party company(ies) to whom we may have disclosed, within the past year, Personal Information (as defined herein) pertaining to you and your family for that company's direct marketing purposes; and b) a description of the categories of Personal Information disclosed. To obtain such information, please email your request to <a href="mailto:question@munchado.com">Question@MunchAdo.com</a>
+            <br> If you are a California resident, you have the right to receive: a) information identifying any third-party company(ies) to whom we may have disclosed, within the past year, Personal Information (as defined herein) pertaining to you and your family for that company's direct marketing purposes; and b) a description of the categories of Personal Information disclosed. To obtain such information, please email your request to <a title="Mail to" href="mailto:question@munchado.com">Question@MunchAdo.com</a>
         </p>
     </div>
 </div>
