--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -5,7 +5,7 @@
       <app-activity-list *ngSwitchCase="'myActivity'"></app-activity-list>
       <app-card-item *ngSwitchCase="'addtocart'"></app-card-item>
       <app-login-source *ngSwitchCase="'login'"></app-login-source>
-      <app-order-details *ngSwitchCase="'orderDetail'"></app-order-details>
+      <app-order-details *ngSwitchCase="'orderDetail'" [_id]="_id"></app-order-details>
       <app-order-link-form *ngSwitchCase="'linkFormOrder'"></app-order-link-form>
       <app-register-source *ngSwitchCase="'register'"></app-register-source>
       <app-reservation-form *ngSwitchCase="'reservation'"></app-reservation-form>
