--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -251,7 +251,7 @@
                 <div class="row">
                   <p class="col-md-5 column hidden-sm hidden-xs">&nbsp;</p>
                   <div class="col-md-7 text-align-center">
-                    <a href="javascript:void(0);" class="ubtn blackbtn placemyorder" ng-click="placeOrder($event)">place my order</a>
+                    <a href="javascript:void(0);" class="ubtn blackbtn placemyorder" (click)="placeOrder($event)">place my order</a>
                     <span class="lineloader confirm_loader hide">  <span></span><span></span><span></span></span>
                   </div>
                 </div>
