--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,3 +1,4 @@
+<div template="ngIf !dishes"  style="position: fixed;left: calc(50% - 50px);top: calc(50% - 50px);"><img src="assets/img/with_hand.gif"><br/>Please wait...</div>
 <div class="_960px" *ngIf="dishes">
                     <p class="sectiontitle">menu</p>            
                     
