--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -8,7 +8,7 @@
       <app-order-details *ngSwitchCase="'orderDetail'" [_id]="_id"></app-order-details>
       <app-order-link-form *ngSwitchCase="'linkFormOrder'"></app-order-link-form>
       <app-register-source *ngSwitchCase="'register'"></app-register-source>
-      <app-reservation-form *ngSwitchCase="'reservation'"></app-reservation-form>
+      <app-reservation-form *ngSwitchCase="'reservation'" [_data]="_data"></app-reservation-form>
       <app-reservation-link-form *ngSwitchCase="'linkFormReservation'"></app-reservation-link-form>
       <app-search-geoaddress *ngSwitchCase="'searchAddress'"></app-search-geoaddress>
       <app-twitter-register *ngSwitchCase="'twitterlogin'"></app-twitter-register>
