--- a/src/app/story/story.component.html
+++ b/src/app/story/story.component.html
@@ -1,6 +1,6 @@
  <div *ngIf="story" class="storydividedtxt _mt50" [innerHtml]="story.story_title"></div>
 <div *ngFor="let s of story.section_list">
-    <p class="sectiontitle">{{s.title}}</p>
+    <p class="sectiontitle _mt70">{{s.title}}</p>
     <div class="row _pt50 _pt15-xs display-flex display-flex-none-xs">
         <div class="col-md-6 col-xs-12">
             <img  [src]="getImage(story.base_url,s.image)"  alt="{{s.title}}" class="img-responsive-100">
