--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,8 @@
           <div *ngIf="!multipleAddress">
             <a routerLink="{{rootId}}/menu" class="hl y-go-to-menu pagejump">order online</a>
             <a href="javascript:void(0)" ng-show="currentRestaurant.has_reservation" data-popup="reserve_a_table" class="hl y-reserveTable _m0" (click)="reservetable()">reserve a table</a>
-            <a routerLink="{{rootId}}/menu" data-target="menu" class="i_addtocard pagejump y-go-to-checkout">
-                <i class="gi i_cart y-no-item"><span class="cartCount">{{cartCount}}</span></i>
+            <a routerLink="{{rootId}}/menu" class="i_addtocard pagejump y-go-to-checkout">
+                <i *ngIf="cartCount>0" class="gi i_cart y-no-item"><span class="cartCount">{{cartCount}}</span></i>
          </a>
           </div>
           <div *ngIf="multipleAddress">
