reservation calender implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
 <header-app></header-app>
 <router-outlet></router-outlet>
 <app-dialog></app-dialog>
+<app-reservation-form></app-reservation-form>
 <app-footer></app-footer>
 </div>
