--- a/src/app/reservation-form/reservation-form.component.css
+++ b/src/app/reservation-form/reservation-form.component.css
@@ -1,16 +1,24 @@
-.md-select-menu-container {
-  z-index: 101;
+#my-div .ngui-datetime-picker {
+  background-color: blue;
 }
-.md-select-menu-container {
-        z-index: 9999;
-    }
-md-backdrop.md-select-backdrop {
-z-index:103;
+.popup_reservetable_overlay {
+  background: rgba(0, 0, 0, .8);
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index:100;
+  display: none;
 }
-
-.md-select-menu-container {
-z-index:104;
+.popup_reservetable {
+  background: #fff;
+  width: 600px;
+  margin: 70px auto 0;
 }
-.cdk-overlay-container {
-z-index:1127;
+#closebtn {
+  background: #000;
+  float: right;
+  width: 20px;
+  height: 20px;
 }
