--- a/src/app/reservation-form/reservation-form.component.html
+++ b/src/app/reservation-form/reservation-form.component.html
@@ -1,4 +1,6 @@
+<div class="popup_reservetable_overlay">
 <div class="_p30 popup_reservetable">
+  <span id="closebtn" (click)="hideReservation()">close</span>
   <form name="bookform" id="bookform" method="post">
     <div *ngIf="isReservationTime" class="formstep1">
       <p class="sectiontitle _mb40">reserve a table</p>
@@ -23,8 +25,6 @@
           <div class="col-md-4  col-sm-4">
             <div>
               <material-datepicker #picker [(date)]="myDate"></material-datepicker>
-                        <button (click)="picker.onInputClick(); $event.stopPropagation()">Open manually</button>
-
               <!--<md-datepicker-toggle mdSuffix [for]="picker"></md-datepicker-toggle>-->
               <!--<md-datepicker ng-init="reservationdata.myDate = reservationdata.myDate || 'myDate'" ng-model="myDate" md-min-date="minDate" ng-change="dateChange(myDate)" name="datepicker1" id="datepicker1" md-placeholder="Enter date"></md-datepicker>-->
             </div>
@@ -153,4 +153,5 @@
       <p class="txt_yourinvites_expect _fs14 text-align-center">Expect RSVPs soon!</p>
     </div>
   </form>
+</div>
 </div>
